--- a/src/pages/Reservations/Reservations.css
+++ b/src/pages/Reservations/Reservations.css
@@ -11,6 +11,7 @@
     justify-items: center;
     justify-content: center;
     margin-top: 250px;
+    z-index: 0;
 }
 
 .loader{
